bugfix deferent search detail

--- a/iidaPro-2015/noMyAlarmCell.xib
+++ b/iidaPro-2015/noMyAlarmCell.xib
@@ -17,7 +17,7 @@
                         <rect key="frame" x="82" y="28" width="156" height="32"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
