--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8Oe-oa-Gau">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8Oe-oa-Gau">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -348,7 +348,7 @@
                                     <constraint firstAttribute="height" constant="45" id="25m-Er-Z2l"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="粗大ごみ受付センター" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ks-5p-bkO">
@@ -358,7 +358,7 @@
                                     <constraint firstAttribute="height" constant="45" id="76m-EK-RXL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="000-000-0000" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Vao-X6-RSh">
@@ -380,7 +380,7 @@
                                     <constraint firstAttribute="height" constant="45" id="7Wc-jz-Yzf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="000-000-0000" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="BFV-xI-ILg">
@@ -543,11 +543,12 @@
                                     <constraint firstAttribute="height" constant="50" id="jYV-ES-ggZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="ILJ-WS-znU"/>
+                                        <exclude reference="jYV-ES-ggZ"/>
                                     </mask>
                                 </variation>
                             </label>
@@ -557,7 +558,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gmU-Ei-aYO" secondAttribute="height" multiplier="1:1" id="6s7-p6-3mW"/>
                                 </constraints>
-                                <state key="normal" image="teku"/>
+                                <state key="normal" image="tec"/>
                                 <connections>
                                     <action selector="SecondTipsBottun:" destination="HN8-PE-Zbx" eventType="touchUpInside" id="jRs-nU-A1r"/>
                                 </connections>
@@ -568,7 +569,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Tei-ik-uwd" secondAttribute="height" multiplier="1:1" id="B1G-wc-4z1"/>
                                 </constraints>
-                                <state key="normal" title="button4" image="info"/>
+                                <state key="normal" title="button4" image="jouhou"/>
                                 <connections>
                                     <action selector="forthTipsBottun:" destination="HN8-PE-Zbx" eventType="touchUpInside" id="2nf-sb-cxf"/>
                                 </connections>
@@ -579,7 +580,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1sW-jv-JIH" secondAttribute="height" multiplier="1:1" id="h5I-o6-YEz"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="dekigoto"/>
+                                <state key="normal" title="Button" image="deki"/>
                                 <connections>
                                     <action selector="thirdTipsBottun:" destination="HN8-PE-Zbx" eventType="touchUpInside" id="gcz-dN-ZVw"/>
                                 </connections>
@@ -927,9 +928,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dekigoto" width="80" height="80"/>
-        <image name="info" width="82" height="83"/>
-        <image name="ruru" width="82" height="81"/>
-        <image name="teku" width="83" height="82"/>
+        <image name="deki" width="87" height="87"/>
+        <image name="jouhou" width="86" height="87"/>
+        <image name="ruru" width="87" height="87"/>
+        <image name="tec" width="87" height="87"/>
     </resources>
 </document>
